# aoc24

./: Cargo.toml
benches/: bench.rs
src/: day1.rs  day10.rs  day11.rs  day12.rs  day16.rs  day17.rs  day2.rs  day23.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  main.rs  util.rs
